2007-10-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_uri_get_subtitle_for_uri),
	(totem_uri_get_subtitle_in_subdir), (totem_uri_get_subtitle_uri):
	Look for subtitles in the subtitles/ directory as well
	(Closes: #481032)

2007-09-26  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_state):
	* lib/totem-scrsaver.c: (totem_scrsaver_disable),
	(totem_scrsaver_enable), (totem_scrsaver_set_state):
	Fix crash when there's no screensaver objects, and add assertion
	guards in totem-scrsaver.c (Closes: #480558)

2007-09-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add audio/x-vorbis as used in
	http://www.play.cz/radio-7

2007-09-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_parent_window_notify):
	When an error occurs and we dismiss the error dialogue, don't hide
	the cursor if we're not in fullscreen
	* src/totem.c: (totem_action_seek), (seek_slider_released_cb):
	When a seek error occurs, reset the seeking so that the interface
	is ready to use again

2007-09-21  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-python-module.c:
	(totem_python_module_init_python): Initialise PyGObject threads
	as soon as possible, or it could cause assertions when using
	threaded python code (See: #469852)

2007-09-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_set_cursor),
	(totem_fullscreen_motion_notify),
	(totem_fullscreen_parent_window_notify): Only show the popup on
	motion notifies if the window is active, show the cursor on the
	video window when it's not active, or when it becomes active
	(Closes: #471381)

2007-09-19  Bastien Nocera  <hadess@hadess.net>

	* data/fullscreen.ui:
	* src/totem-fullscreen.c: (totem_fullscreen_popup_timeout_add),
	(totem_fullscreen_is_volume_popup_visible),
	(totem_fullscreen_force_popup_hide), (totem_fullscreen_popup_hide),